EM-6811 fix code smells -Part-1 (#2694)